--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -59,15 +59,49 @@
     .hand {
       width: 50%;
       height: 6px;
-      background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+    .hour-hand{
+      background-color: yellow;
+      width: 40%;
+      margin-left: 25px;
+    }
+    .min-hand{
+      background-color: yellowgreen;
+    }
+    .second-hand{
+      background-color: red;
     }
 
   </style>
 
   <script>
+ const secondHand = document.querySelector('.second-hand');//querySelector and getElementbyId returns an element
+  const minsHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
 
+  function setDate() {
+    const now = new Date();
+
+    const seconds = now.getSeconds();
+    const secondsDegrees = ((seconds / 60) * 360) + 90;
+    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+    const minute = now.getMinutes();
+    const minDegree = ((minute / 60) * 360) + ((seconds/60)*6) + 90;
+    minsHand.style.transform = `rotate(${minDegree}deg)`;
+
+    const hours = now.getHours();
+    const hourdegree = ((hours / 12) * 360) + ((minute/60)*30) + 90;
+    hourHand.style.transform = `rotate(${hourdegree}deg)`;
+  }
+
+  setInterval(setDate, 1000);
 
   </script>
 </body>
